<resources>
    <string name="app_name">Stargate Quiz App</string>
    <string name="question1">What was the first planet SG-1 team went throught the gate?</string>
    <string name="right1">Abydos</string>
    <string name="hint1">Name of the planet</string>
    <string name="question2">Who was the first lady in the SG-1 team?</string>
    <string name="right2">Samantha Carter</string>
    <string name="hint2">Full name</string>
    <string name="submit">Submit</string>string>
    <string name="question3">In which episode Jack and Teal\'c played the golf throungt the gate?</string>
    <string name="answer31">05x04</string>
    <string name="answer32">04x06</string>
    <string name="answer33">06x09</string>
    <string name="question4">Which races are ascended?</string>
    <string name="answer41">Ancients</string>
    <string name="answer42">Tok\'ra</string>
    <string name="answer43">Ori</string>
    <string name="answer44">Asgards</string>
    <string name="rightResult">Awesome! You have all the answers correct. Congratulations!</string>
    <string name="wrongResult">Do not worry, it happens. You have count of right answers: </string>
</resources>
